src/test/ui/parser/macros-no-semicolon-items.rs
macro_rules! foo()  //~ ERROR semicolon

fn main() {
}
